<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>TODO_PACKAGE_NAME</name>
    <version>0.1.0</version>
    <description>A node template</description>
    <maintainer email="avealov@umich.edu">Andrew Ealovega</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>

    <!--Messages TODO_EXTRA-->
    <depend>ackermann_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <!--OpenCv Things TODO_EXTRA-->
    <depend>cv_bridge</depend>
    <depend>libopencv-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_clang_tidy</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_nose</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
